# Founder-Of-Nations

./: .gitignore  CMakeLists.txt  README.md
assets/mus/: death.bgm  m1.bgm  m2.bgm  m3.bgm
src/: chunk.cpp  chunk.hpp  entity.hpp  generator.cpp  main.cpp  musman.cpp  musman.hpp  noiseutil.cpp  noiseutil.hpp  player.cpp  player.hpp  sfxman.cpp  sfxman.hpp  state.cpp  state.hpp  tiles.hpp  ui.cpp  ui.hpp  world.cpp  world.hpp
src/entity/: arrow.cpp  arrow.hpp  beholder.hpp  drop.cpp  drop.hpp  enemy.cpp  enemy.hpp  entity.cpp  entity.hpp  entityman.cpp  entityman.hpp  slime.cpp  slime.hpp  spider.cpp  spider.hpp
src/entity/humans/: human.cpp  human.hpp
src/player/: inventory.cpp  inventory.hpp  player.cpp  player.hpp  playeraction.cpp  ui.cpp  ui.hpp
src/world/: chunk.cpp  chunk.hpp  generator.cpp  generator.hpp  noiseutil.hpp  tiles.hpp  world.cpp  world.hpp
